[package]
name = "page-tracker-worker"
version = "0.1.0"
authors = ["Francis Murillo <francis.murillo@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = { version = "0.1.2" }
console_error_panic_hook = { version = "0.1.1", optional = true }
lazy_static = { version = "1.4.0" }
serde_json = { version = "1.0.67" }
wee_alloc = { version = "0.4.2", optional = true }
worker = { version = "0.0.6" }

[profile.release]
opt-level = "s"
